<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_signup"
        android:title="@string/action_signup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_memo"
        android:title="@string/action_memo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_buttons"
        android:title="@string/action_buttons"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_checkboxes"
        android:title="@string/action_checkboxes" />
    <item
        android:id="@+id/action_spinners"
        android:title="@string/action_spinners" />
    <item
        android:id="@+id/action_alerts"
        android:title="@string/action_alerts" />
</menu>